# FOOD

./: .gitignore  CMakeLists.txt  LICENSE  PackagesList.cmake  TPLsList.cmake  Version.cmake
cmake/: Dependencies.cmake
cmake/TPLs/: FindTPLMOAB.cmake  FindTPLMeshKit.cmake  FindTPLiMesh.cmake
core/cmake/: Dependencies.cmake
core/example/: CMakeLists.txt
core/example/ConsistentInterpolation/: CMakeLists.txt  linear_vector.cpp
core/example/FEMInterpolation/: CMakeLists.txt  coarse_99_tet_part.cub  linear_vector.cpp  quadratic_scalar.cpp  small_box.cpp  tag_coarse_mesh.py  tag_mesh.py
core/src/: BSPTree.hpp  BSPTreeFactory.cpp  BSPTreeFactory.hpp  BasisFactory.hpp  BasisFactory_Def.hpp  CMakeLists.txt  CellTopologyFactory.cpp  CellTopologyFactory.hpp  CoreTypes.hpp  DFuncKernel.hpp  DFuncKernel_Def.hpp  Domain.cpp  Domain.hpp  FEMInterpolate.hpp  FEMInterpolate_Def.hpp  KDTree.cpp  KDTree.hpp  KDTree_Def.hpp  KernelTraits.cpp  KernelTraits.hpp  Octree.cpp  Octree.hpp  PointQuery.cpp  PointQuery.hpp  Quantity.cpp  Quantity.hpp  Rendezvous.hpp  Rendezvous_Def.hpp  TensorField.hpp  TensorField_Def.hpp  TensorTemplate.cpp  TensorTemplate.hpp  TopologyTools.cpp  TopologyTools.hpp  TypeTraits.hpp  Types.hpp  Unit.cpp  Unit.hpp
core/test/: CMakeLists.txt  tstBasisFactory.cpp  tstDFuncKernel.cpp  tstDomain.cpp  tstFEMInterpolate.cpp  tstKDTree.cpp  tstOctree.cpp  tstPointQuery.cpp  tstQuantity.cpp  tstRendezvous.cpp  tstTensorField.cpp  tstTensorTemplate.cpp  tstUnit.cpp  tstiMesh.cpp
discretization/: CMakeLists.txt
discretization/cmake/: Dependencies.cmake
discretization/src/: BasisFactory.hpp  BasisFactory_Def.hpp  CMakeLists.txt  CellTopologyFactory.cpp  DFuncKernel.hpp  DFuncKernelFactory.hpp  DFuncKernelFactory_Def.hpp  DiscretizationTypes.hpp  IntrepidKernel.hpp  IntrepidKernel_Def.hpp  IntrepidQuadrature.hpp  IntrepidQuadrature_Def.hpp  Quadrature.hpp  QuadratureFactory.hpp  QuadratureFactory_Def.hpp  TopologyTools.cpp  TopologyTools.hpp
discretization/test/: CMakeLists.txt  tstBasisFactory.cpp  tstDFuncKernel.cpp  tstDFuncKernelFactory.cpp  tstIntrepidKernel.cpp  tstIntrepidQuadrature.cpp  tstQuadratureFactory.cpp  tstTopologyTools.cpp
field/: CMakeLists.txt
field/cmake/: Dependencies.cmake
field/example/: CMakeLists.txt
field/src/: CMakeLists.txt  Domain.cpp  Domain.hpp  FieldTypes.hpp  Quantity.cpp  Quantity.hpp  TensorField.hpp  TensorField_Def.hpp  TensorTemplate.cpp  TensorTemplate.hpp  TypeTraits.hpp  Unit.hpp
field/test/: CMakeLists.txt  tstDomain.cpp  tstTensorField.cpp  tstTensorTemplate.cpp  tstiMesh.cpp
itaps/: CMakeLists.txt  iRel.h
itaps/cmake/: Dependencies.cmake
itaps/src/: CMakeLists.txt  iArray.h  iBase.h  iField.h  iGeom.h  notes_ifield.txt
search/: CMakeLists.txt
search/cmake/: Dependencies.cmake
search/example/: CMakeLists.txt
search/src/: CMakeLists.txt  KDTree.hpp  KDTree_Def.hpp  Octree.cpp  Octree.hpp  PointQuery.cpp  PointQuery.hpp
search/test/: CMakeLists.txt  tstKDTree.cpp  tstOctree.cpp  tstPointQuery.cpp
tools/: update_itaps_spec
transfer/: CMakeLists.txt
transfer/cmake/: Dependencies.cmake
transfer/example/: CMakeLists.txt
transfer/src/: CMakeLists.txt  ConsistentScheme.hpp  ConsistentScheme_Def.hpp  DataTransferScheme.hpp  DataTransferSchemeFactory.cpp  DataTransferSchemeFactory.hpp  FEMInterpolate.hpp  FEMInterpolate_Def.hpp
transfer/test/: CMakeLists.txt  tstFEMInterpolate.cpp  tstRendezvous.cpp
utils/: CMakeLists.txt
utils/cmake/: Dependencies.cmake
utils/example/: CMakeLists.txt
utils/src/: CMakeLists.txt  Exception.cpp  Exception.hpp
(+26 files in other folders)
